correction police header

--- a/public/css/header.style.css
+++ b/public/css/header.style.css
@@ -1,7 +1,7 @@
 @font-face
 {
     font-family:'Rasputin'; 
-    src: url('public/polices/rasputin/Rasputin.otf'); 
+    src: url('../polices/rasputin/Rasputin.otf'); 
     
 }
 
