--- a/public/css/page_age.style.css
+++ b/public/css/page_age.style.css
@@ -15,7 +15,7 @@
 
 body{
     margin:0;
-    /*background-image:url("../images/DALLE_2023-04-19_12.01.00_-_fantastic_forest_with_lights_effects.png") ;*/
+    background-image:url("../images/DALLE_2023-04-19_12.01.00_-_fantastic_forest_with_lights_effects.png") ;
     background-position:center;
     background-repeat: no-repeat;
     height:700px;
@@ -116,38 +116,7 @@ h2{
     width:100%;
 }
 
-/*
-button{
-    display: block;
-    width: 110%;
-    max-width: 145px;
-    height: 50px;
-    font-size: 16px;
-    line-height: 1.75;
-    color: #333;
-    background-color: #ffffff;
-    border: 1px solid #cccccc;
-}*/
-/*
-#valider {
-    position: relative;
-    display: block;
-    border: 1px solid white;
-    width: 5%;
-    text-align: center;
-    font-family: 'Montserrat Regular';
-    font-size: medium;
-    text-decoration: none;
-    color: black;
-    background-color: white;
-    padding: 10px 16px 16px 16px;
-    border: 1px solid black; 
+#abus{
+    margin-top:25%;
 }
-*/
-/*
-#valider{
-    margin-top: 5%;
-    margin-left: -11%;
-}
-*/
 
