putain la page age marche

--- a/public/css/page_age.style.css
+++ b/public/css/page_age.style.css
@@ -21,6 +21,7 @@ body{
     height:700px;
 }
 
+/*
 .menu li a {
     text-decoration: none;
     color:white;
@@ -33,7 +34,7 @@ body{
     
 }
 
-
+*/
 
 h1{
     font-family: 'Rasputin';
