--- a/public/css/page_age.style.css
+++ b/public/css/page_age.style.css
@@ -15,7 +15,7 @@
 
 body{
     margin:0;
-    /*background-image:url("../images/DALLE_2023-04-19_12.01.00_-_fantastic_forest_with_lights_effects.png") ;*/
+    background-image:url("../images/DALLE_2023-04-19_12.01.00_-_fantastic_forest_with_lights_effects.png") ;
     background-position:center;
     background-repeat: no-repeat;
     height:700px;
