--- a/public/css/accueil.style.css
+++ b/public/css/accueil.style.css
@@ -8,7 +8,7 @@
 
 
 body{
-    background-image: url("../images/foretaccueil.png");
+    background-image: url("public/images/foretaccueil.png");
     margin:0;
     background-position:center;
     background-repeat: no-repeat;
