--- a/public/css/accueil.style.css
+++ b/public/css/accueil.style.css
@@ -1,35 +1,83 @@
-
-
-
-
-
-
-
-
-
 body{
-    background-image: url("../images/foretaccueil.png");
     margin:0;
+    background-image:url("../images/backeil.png") ;
+    background-size: 100em;
     background-position:center;
     background-repeat: no-repeat;
-    height:700px;
+    height:90em;
 }
 
+h1{
+    margin-top: 10%;
+    font-family: 'Rasputin';
+    color:rgb(255, 255, 255);
+    text-align: center;
+    padding-top: 3%;
+    font-size: 300%;
+    margin-bottom: -4%;
+}
 
+html, body {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .pic-ctn {
+    width: 50vw;
+    height: 100px;
+  }
+  
+  @keyframes display {
+    0% {
+      transform: translateX(200px);
+      opacity: 0;
+    }
+    10% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+    20% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+    30% {
+      transform: translateX(-200px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(-200px);
+      opacity: 0;
+    }
+  }
+  
+  .pic-ctn {
+    position: relative;
+    width: 50vw;
+    height: 50em;
+    margin-top: 15vh;
+  }
+  
+  .pic-ctn > img {
+    position: absolute;
+    top: 0;
+    left: calc(50% - 100px);
+    opacity: 0;
+    animation: display 12s infinite;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  }
+  
+  img:nth-child(2) {
+    animation-delay: 2s;
+  }
+  img:nth-child(3) {
+    animation-delay: 4s;
+  }
+  img:nth-child(4) {
+    animation-delay: 6s;
+  }
+  img:nth-child(5) {
+    animation-delay: 8s;
+  }
+  img:nth-child(6) {
+    animation-delay: 10s;
+  }
