--- a/public/css/contact.style.css
+++ b/public/css/contact.style.css
@@ -1,6 +1,8 @@
-<style>
+h2{
+margin-top: 10%;
+}
 body {
-    background-image: url("public/images/fond.page-contact.png");
+    background-image: url("..//images/fond-page-contact.png");
     background-size: cover;
     background-position: center;
     font-family: "Rasputin", sans-serif;
@@ -9,46 +11,65 @@ body {
 .container {
     max-width: 500px;
     margin: 0 auto;
-    margin-top: 10vh;
+    margin-top: 10%;
+    margin-bottom: 6%;
     padding: 20px;
-    background-color: #A674AD;
-    border-radius: 5px;
+    background-color: rgba(166, 116, 173);
+    border-radius: 25px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
+
 h1 {
     text-align: center;
     font-family: "Rasputin", sans-serif;
+    background-color: #0F1450;
+    color: white;
+    padding: 10px;
+    border-radius: 15px;
+    margin-top: 0;
 }
+
 label {
     display: block;
     margin-bottom: 10px;
 }
+
 input[type="text"],
-input[type="email"],
 textarea {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 10px;
     box-sizing: border-box;
     margin-bottom: 10px;
+    background-color: #f4f4f4;
 }
+
 textarea {
     resize: vertical;
 }
+
+#message{
+    padding-bottom: 23%;
+    margin-bottom: 5%;
+}
+
 input[type="submit"] {
-    background-color: #0F1450; 
+    background-color: #0F1450;
     color: white;
     padding: 10px 20px;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     cursor: pointer;
+    transition: background-color 0.3s;
 }
+
 input[type="submit"]:hover {
     background-color: #45a049;
 }
-.success-message {
-    color: green;
+
+#copyrights {
+    margin-bottom: -2%;
 }
-.error-message {
-    color: red;
-}
+
+
