--- a/public/css/header.style.css
+++ b/public/css/header.style.css
@@ -1,8 +1,6 @@
-@font-face
-{
+@font-face{
     font-family:'Rasputin'; 
-    src: url('../polices/rasputin/Rasputin.otf'); 
-    
+    src: url('../polices/rasputin/Rasputin.otf');
 }
 
 
@@ -44,7 +42,6 @@ nav {
     font-size: .9rem;
     padding: 0.2rem 1rem;
     width: 10%;
-    font-weight: bold;
     
 }
 
@@ -73,7 +70,6 @@ nav {
 }
 
 .classheadercentre {
-    /*background-color:#6b3814;*/
     background-color: #0f1450;
     height:40px;
     text-align: center;
@@ -105,13 +101,48 @@ nav {
     transition:0.3s;
 }
 
-#logo{
-    width: 10rem;
-    text-align: center;
+
+#listlogo {
+    margin: 0;
+    padding: 0;
+    width: fit-content;
 }
+
+#logo {
+    width: 10rem;
+}
+
 #logo:hover {
-    transition:0.3s;
-    width:110%;
-    margin-left:-27px;
-    margin-right: +220px;
+    transition: 0.3s;
+    transform: scale(1.2); 
+}
+
+#logo img {
+    width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+    .menu {
+      padding-left: 10%;
+      grid-template-columns: 1fr 1fr 1fr;
+      justify-content: space-between;
+    }
+
+    .classheaderdroite {
+        border-radius: 0px 0px 0px 0px;
+    }
+
+    .classheadergauche {
+        border-radius: 0px 0px 0px 0px;
+    }
+  
+    #caddie {
+      grid-column: 3;
+    }
+}
+  
+@media screen and (max-width: 500px) {
+    #logo {
+      width: 8rem;
+    }
 }
